[package]
name = "icebg"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14.0", default-features = false, features = [
    "tiny-skia",
    "wayland",
    "thread-pool",
    "tokio",
    "image"
] }
iced_layershell = "0.15.0"
serde_derive = "1.0.228"
serde = "1.0.228"
home = "0.5.12"
ron = "0.12.0"
